fix overflow-y not working

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -136,7 +136,7 @@ hr {
 }
 
 .order-history {
-    max-height: 500px;
+    max-height: 400px;
     overflow-y: auto;
 }
 /* Stripe */
